--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/raull/Downloads/mockito-core-2.28.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/raull/Downloads/byte-buddy-1.9.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/raull/Downloads/byte-buddy-agent-1.9.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/raull/Downloads/objenesis-tck-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
