--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="tsw"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -11,6 +12,5 @@
 	<classpathentry kind="lib" path="C:/Users/raull/Downloads/byte-buddy-1.9.13.jar"/>
 	<classpathentry kind="lib" path="C:/Users/raull/Downloads/byte-buddy-agent-1.9.13.jar"/>
 	<classpathentry kind="lib" path="C:/Users/raull/Downloads/objenesis-tck-3.0.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
